# LLM-Wiki-Kit

./: .env.example  .gitignore  AGENTS.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_CN.md  ROADMAP.md  pyproject.toml  需求文档.md
.agents/plugins/: marketplace.json
docs/: architecture.md  claude-desktop.md  codex-workflow.md  current-state-workflow.md  hermes-deployment.md  mini-kb.md  obsidian-tags.md  philosophy.md  quickstart.md  remote-connector.md  source-trust-model.md  workflow.md
examples/ecommerce-local-life/: README.md
examples/personal-research/: README.md
examples/product-knowledge-ops/: README.md
hermes/: README.md  install_skills.sh
linta-promo/: package.json
plugins/linta/: README.md
scripts/: validate_example.py
src/linta/: __init__.py  agent_access.py  claude_desktop.py  cli.py  doctor.py  indexes.py  linting.py  mcp_server.py  migration.py  paths.py  prompts.py  remote_mcp.py  source_card.py
src/llm_wiki_kit/: __init__.py  agent_access.py  claude_desktop.py  cli.py  config.py  doctor.py  export.py  hermes.py  indexes.py  init_kb.py  linting.py  maintenance.py  manifest.py  mcp_server.py  mini_kb.py  paths.py  prompts.py  source_card.py  tags.py
tests/: test_codex_plugin.py  test_init.py  test_phase2.py  test_phase3_content.py  test_phase4_hermes.py  test_phase5_polish.py  test_v024_raw_maintenance.py  test_v025_doctor.py  test_v02_tags_indexes.py  test_v030_agent_access.py  test_v032_migration.py  test_v033_claude_practical_context.py  test_v035_context_freshness.py  test_v037_remote_mcp_connector.py
(+71 files in other folders)
