[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-wiki-kit"
version = "0.1.0"
description = "Deterministic scaffolding and CLI helpers for LLM-compiled Markdown knowledge bases."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "llm-wiki-kit contributors" }
]
dependencies = [
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "rich>=13.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
llm-wiki = "llm_wiki_kit.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_wiki_kit = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
